--- a/template/dis-groupproject-metadata.tex
+++ b/template/dis-groupproject-metadata.tex
@@ -9,7 +9,7 @@
 
 
 % Title
-\DISTitle{Results from My Group Project}
+\DISTitle{Improving radiosensitivity predictions of brain cells using a biologically informed neural network}
 
 % Draft version:
 % If given, adds draft version on front page, a 'DRAFT' box on top of each other page, 
@@ -25,11 +25,11 @@
 
 % Authors and list of contributors to the analysis
 \usepackage{authblk}
-\author[a]{First Author}
-\author[a]{Second Author}
-\author[b]{Third Author}
+\author[a]{Toby Dixon}
+\author[a]{Dakshesh Kololgi}
+\author[b]{Jason Ran}
+
 \affil[a]{University College London}
-\affil[b]{Industry Partner Company Name}
 
 
 % DIS reference code if ever used
