add an abstract

--- a/template/dis-groupproject-metadata.tex
+++ b/template/dis-groupproject-metadata.tex
@@ -5,7 +5,7 @@
 
 % Partner Logo
 % put the name of the logo image file found in graphics path
-%\DISPartnerLogo{path/to/logo/image}
+\DISPartnerLogo{logos/UCL_purple.png}
 
 
 % Title
@@ -19,7 +19,7 @@
 
 % Abstract - % directly after { is important for correct indentation
 \DISAbstract{%
-  The abstract of my report.
+  One of the current most effective treatments for brain tumor's is radiotherapy. However, this has the side-effect of damaging healthy cells with potentially severe consequences. Improvements in radiotherapy treatment such as proton therapy allow a more spatially localized treatment. However, the sensitivity of different cell types to radioactivity is not currently well modeled. We present a method for predicting the radio-sensitivity of a cell based on its genetic content using a biologically informed neural network. We compare the use of different data features for training this model, different network architecture and develop a procedure for transfer learning, where drug response data is incorporated into the model training. We compare the model performance using a cross-validation procedure ensuring unbiased performance estimates with faithful uncertainty estimates. We find ...
 }
 
 
