--- a/template/PNET_project.bib
+++ b/template/PNET_project.bib
@@ -1,4 +1,4 @@
-@phdthesis{mythesis,
+@phdthesis{cosmin_thesis,
   title        = {Biologically Informed Neural Networks
 for Glioma Classification and Cell
 Radiosensitivity Prediction},
@@ -7,4 +7,11 @@ Radiosensitivity Prediction},
   month        = {January},
   school       = {University College London},
   type         = {Masters dissertation}
+}
+
+@misc{scikit-learn-docs,
+  title={{scikit-learn} Documentation},
+  author={{scikit-learn} Contributors},
+  howpublished={\url{https://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html}},
+  year={Accessed: April 8, 2024}
 }
