--- a/template/PNET_project.tex
+++ b/template/PNET_project.tex
@@ -13,7 +13,7 @@
 % The language of the document must be set: usually UKenglish or USenglish.
 % british and american also work!
 % Commonly used options:
-%  cdtdraft=true|false   This document is an UCL CDT DIS draft.
+%  cdtdraft=true|false   This document is a UCL CDT DIS draft.
 %  paper=a4|letter       Set paper size to A4 (default) or letter.
 
 %--------------------------------------------------------------------- 
@@ -65,20 +65,33 @@
 %---------------------------------------------------------------------
 \section{Data}
 \label{sec:data}
-{\color{red}Toby: I think what we should do here is describe the available datasets (where they come from, the size the features), and make some nice plots to show the distributuons in data etc.}
+{\color{red}Toby: I think what we should do here is describe the available datasets (where they come from, the size the features), and make some nice plots to show the distributions in data etc.}
 \\
-For this work we use data from the CCLE (full name+ \ref{}) database. This consists of measurements of the radio-sensitivity of 511 cell lines along with their genetic sequence. The radio-sensitivity is characterized by the area under the dose response curve (AUC). This is relatively expensive measure requiring irradiation of cells with known doses of radiation. This limits the size of the available dataset. 
+For this work, we use genomic data as predictors. This type of information is contained within a cell and enables its growth and reproduction. It is characterised by DNA (deoxyribonucleic acid), RNA (ribonucleic acid), and proteins. We focus on gene expression data
+
+three types of genomic data: copy number variation, the number of repeated genomic sequences. The number of somatic 
+
+data from the CCLE (full name+ \ref{}) database. This consists of measurements of the radio-sensitivity of 511 cell lines along with their genetic sequence. The radio-sensitivity is characterized by the area under the dose response curve (AUC). This is relatively expensive measure requiring irradiation of cells with known doses of radiation. This limits the size of the available dataset. 
 \\ \indent However, advances in genetic sequencing \ref{} mean that for each cell line there is a large amount of genetic information available. Thus the dataset available has a large number of features but very few data-points. This situation can easily lead to overfitting \ref{}. We focus on 3 genetic features. Gene-expression, copy number violation, and mutations.
+
 \section{Methods}
 \label{sec:method}
-For this work we employ a biologically informed neural network to predict the radio-sensitivity. This is based on our adaptation of P-NET \cite{mythesis}. A typical dense neural network has millions of connections, and thus weights to tune. Thus can easily lead to over-fitting where the model predicts well on the training dataset but not on unseen data. A solution to this is to encode some prior knowledge into the models architechture. In this way we create a sparse network where the connections represent known biological pathways.
+For this work we employ a biologically informed neural network to predict the radio-sensitivity. This is based on our adaptation of P-NET \cite{cosmin_thesis}. A typical dense neural network has millions of connections, and thus weights to tune. Thus can easily lead to over-fitting where the model predicts well on the training dataset but not on unseen data. A solution to this is to encode some prior knowledge into the models architechture. In this way we create a sparse network where the connections represent known biological pathways.
 \subsection{Network architecture}
+\subsection{Reactome}
+\subsection{Gene Ontology}
+
 \subsection{Transfer learning}
 \subsection{Cross-validation and hyperparameter tuning}
 Due to the very small available datasets we found the performance of a given model can vary significantly based on the test splitting of the data. In addition, the performance can vary based on the random seeds used in the stochastic minimization of the loss function. We also found that the performance can depend significantly on model hyper-parameters. If these are tuned to optimize the performance on a particular test splitting of the data this will result in an overly optimistic estimate of the performance when trained on unseen data.
 \\ \indent To account for this we have developed a cross-validation procedure. This is used both to tune hyper-parameters and to make an unbiased estimate the model performance with a faithful uncertainty estimate. This procedure allows a fair comparison of different models.
 \\ \indent We employ a procedure of nested-random-cross-validation \cite{}. A set of randomly chosen test datasets  are selected. In each case the remaining data is used to tune the model hyper-parameters. For this we use a grid search with random-cross validation. For every hyper-parameter set the data is is partitioned into a validation and a training set. The model training is run using the validation set to decide the early stopping of the training and to estimate the performance. This is then repeated a number of times to obtain an estimate of the mean performance and uncertainty for this hyper-parameter set. The hyper-parameter set with the best model performance are then used to train the model, with the performance judged on the test dataset. The distribution of this testing performance give an unbiased estimate of the model performance, with a reliable uncertainty estimate. This procedure is very computationally intensive and has been implemented using batch job submission in parallel on the Myriad cluster at UCL.
 \\ \indent There are a number of hyper-parameters potentially affecting the model performance. For example the learning rate of the gradient descent and learning rate schedule, L2 regularization parameters, drop-out parameters etc. These hyper-parameters can broadly be divided into two classes, those which control the minimization of the loss function and those which add some terms / modify it to prevent over-fitting. We found most of the hyper-parameters are correlated so focused on two for a optimization, the learning rate and the regularization parameter which are tuned using a grid search.
+\\ \indent To asses model performance we compute the $R^2$ score defined as \cite{scikit-learn-docs}:
+\begin{equation}
+    R^2 = 1-\frac{(\sum y_i - \hat{y}_i)^2}{\sum_i (y_i - \bar{y})^2},
+\end{equation}
+where $y_i$ the value for data-point $i$, $\hat{y}_i$ is the associated prediction, while $\bar{y}$ is the mean of $y$. This gives a measure of the amount of variance in the outputs explained by the model.
 %\input{method}
 
 %---------------------------------------------------------------------
